--- a/assests/scss/root.scss
+++ b/assests/scss/root.scss
@@ -1,3 +1,9 @@
+$font-family_1: "Roboto", sans-serif;
+
+@import "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
+body {
+  font-family: $font-family_1;
+}
 $color_1: var(--bittersweet);
 $color_2: white;
 $color_3: black;
