--- a/assests/scss/style.scss
+++ b/assests/scss/style.scss
@@ -1,3 +1,76 @@
-.nav{
+* {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+main {
+  background: black;
+  display: flex;
+  .side_nav {
+    max-width: 223px;
+    padding: 48px;
+    img {
+      width: 132px;
+    }
+    ul {
+      display: flex;
+      margin-top: 48px;
+      margin-left: 8px;
+      flex-direction: column;
+      li {
+        position: relative;
+        a {
+          font-weight: 700;
+          font-size: 16px;
+          letter-spacing: -0.01em;
+          color: #ffffff;
+          opacity: 0.5;
+          padding: 8px 0;
+          display: block;
+        }
+        :after {
+          content: "";
+          position: absolute;
+          width: 30px;
+          height: 1px;
+          background-color: #fe6a5b;
+          left: -40px;
+          top: 50%;
+          transition: all 0.3s ease-in-out;
+        }
+      }
+    }
+  }
+  .hero_section {
+    min-height: 100vh;
+    border-left: 1px solid #262626;
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h1 {
+      color: white;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 100%;
+      padding-top: 3rem !important;
+      text-transform: uppercase;
+      letter-spacing: 0.3em;
+      margin-bottom: 8px;
+    }
+    h2 {
+      color: white;
+      font-size: 144px;
+      font-weight: 800;
+      line-height: 100%;
+      span {
+        display: block;
+      }
+      .advocate_text {
+        color: #fe6a5b;
+      }
+    }
+  }
 }
