--- a/assests/scss/root.css
+++ b/assests/scss/root.css
@@ -1,15 +1,7 @@
-$font-family_1: "Roboto", sans-serif;
-
 @import "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
 body {
-  font-family: $font-family_1;
+  font-family: "Roboto", sans-serif;
 }
-$color_1: var(--bittersweet);
-$color_2: white;
-$color_3: black;
-$background-color_1: white;
-$background-color_2: black;
-// root
 :root {
   --fs-xsm: 13px;
   --fs-sm: 16px;
@@ -21,7 +13,6 @@ $background-color_2: black;
   --fs-8xl: 144px;
   --bittersweet: #fe6a5b;
 }
-/* font sizes  */
 .fs_xsm {
   font-size: var(--fs-xsm);
 }
@@ -46,24 +37,21 @@ $background-color_2: black;
 .fs_8xl {
   font-size: var(--fs-8xl);
 }
-/* colors  */
 .color_bittersweet {
-  color: $color_1;
+  color: var(--bittersweet);
 }
 .color_white {
-  color: $color_2;
+  color: #fff;
 }
 .color_black {
-  color: $color_3;
+  color: #000;
 }
-// background colors
 .bg_white {
-  background-color: $background-color_1;
+  background-color: #fff;
 }
 .bg_black {
-  background-color: $background-color_2;
+  background-color: #000;
 }
-/* font weight  */
 .fw_400 {
   font-weight: 400;
 }
