--- a/assests/scss/milad.css
+++ b/assests/scss/milad.css
@@ -1,13 +1,1 @@
-.mt_150 {
-  margin-top: 150px;
-}
-.milad_section {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-.border_one_side_top {
-  border-radius: 200px 0px 0px 0px;
-}
-.d_flex {
-  display: flex;
-}
+.mt_150{margin-top:150px}.milad_section{max-width:1440px;margin:0 auto}.border_one_side_top{border-radius:200px 0px 0px 0px}.d_flex{display:flex}.ml_200{margin-left:200px}
