--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -1,7 +1,6 @@
 .mt_150 {
   margin-top: 150px;
 }
-
 .milad_section {
   max-width: 1440px;
   margin: 0 auto;
@@ -11,4 +10,7 @@
 }
 .d_flex {
   display: flex;
+}
+.ml_200 {
+  margin-left: 200px;
 }
