--- a/assests/scss/root.scss
+++ b/assests/scss/root.scss
@@ -79,3 +79,27 @@ $background-color_2: black;
 .fw_800 {
   font-weight: 800;
 }
+@media (max-width: 1200px) {
+  :root {
+    --fs-xsm: 13px;
+    --fs-sm: 16px;
+    --fs-md: 21px;
+    --fs-lg: 27px;
+    --fs-xl: 28px;
+    --fs-2xl: 40px;
+    --fs-5xl: 96px;
+    --fs-8xl: 100px;
+  }
+}
+@media (max-width: 992px) {
+  :root {
+    --fs-xsm: 13px;
+    --fs-sm: 16px;
+    --fs-md: 21px;
+    --fs-lg: 27px;
+    --fs-xl: 28px;
+    --fs-2xl: 40px;
+    --fs-5xl: 96px;
+    --fs-8xl: 80px;
+  }
+}
