--- a/assests/scss/style.scss
+++ b/assests/scss/style.scss
@@ -1,74 +1,88 @@
 * {
   margin: 0;
   padding: 0;
-  list-style-type: none;
-  text-decoration: none;
+  list-style-type: none !important;
+  text-decoration: none !important;
   box-sizing: border-box;
 }
 main {
-  display: flex;
-  .side_nav {
-    max-width: 223px;
-    padding: 48px;
-    img {
-      width: 132px;
+  div {
+    max-width: 1460px;
+    .side_nav {
+      img {
+        width: 180px;
+      }
+      ul {
+        li {
+          position: relative;
+          a {
+            font-weight: 700;
+            font-size: 16px;
+            letter-spacing: -0.01em;
+            color: #ffffff;
+            opacity: 0.5;
+            padding: 8px 0;
+            display: block;
+            transition: all 0.3s ease-in-out;
+          }
+          :hover {
+            opacity: 100%;
+          }
+          :after {
+            content: "";
+            position: absolute;
+            width: 0px;
+            height: 1px;
+            background-color: #fe6a5b;
+            left: -40px;
+            top: 50%;
+            transition: all 0.3s ease-in-out;
+          }
+          :hover:after {
+            width: 30px;
+          }
+        }
+      }
     }
-    ul {
-      display: flex;
-      margin-top: 48px;
-      margin-left: 8px;
-      flex-direction: column;
-      li {
-        position: relative;
-        a {
-          font-weight: 700;
-          font-size: 16px;
-          letter-spacing: -0.01em;
-          color: #ffffff;
-          opacity: 0.5;
-          padding: 8px 0;
-          display: block;
+    .hero_section {
+      min-height: 772px;
+      height: 100vh;
+      border-left: 1px solid #262626;
+      h1 {
+        line-height: 100%;
+        letter-spacing: 0.3em;
+        @media (max-width: 1240px) {
+          max-width: 300px;
+          line-height: 130%;
         }
-        :after {
-          content: "";
-          position: absolute;
-          width: 30px;
-          height: 1px;
-          background-color: #fe6a5b;
-          left: -40px;
-          top: 50%;
-          transition: all 0.3s ease-in-out;
-        }
+      }
+      h2 {
+        line-height: 80%;
+        margin-bottom: 200px;
+        letter-spacing: -0.05em;
+      }
+      .scroll_down {
+        bottom: 24px;
+        left: 16px;
       }
     }
   }
-  .hero_section {
-    min-height: 100vh;
-    border-left: 1px solid #262626;
-    padding-left: 16px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    h1 {
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 100%;
-      padding-top: 3rem !important;
-      text-transform: uppercase;
-      letter-spacing: 0.3em;
-      margin-bottom: 8px;
+  .parthners {
+    height: 85%;
+    z-index: 1;
+    @media (max-width: 1240px) {
+      max-width: 60%;
+      height: auto;
     }
-    h2 {
-      font-size: 144px;
-      font-weight: 800;
-      line-height: 100%;
-      span {
-        display: block;
-      }
-      .advocate_text {
-        color: #fe6a5b;
-      }
+  }
+  .bf_bg_logo {
+    height: 100%;
+    z-index: 0;
+    @media (max-width: 1240px) {
+      max-width: 40%;
+      height: auto;
+      top: 0 !important;
+      bottom: auto !important;
     }
   }
 }
