--- a/assests/scss/root.css
+++ b/assests/scss/root.css
@@ -40,17 +40,8 @@ body {
 .color_bittersweet {
   color: var(--bittersweet);
 }
-.color_white {
-  color: #fff;
-}
-.color_black {
-  color: #000;
-}
-.bg_white {
-  background-color: #fff;
-}
-.bg_black {
-  background-color: #000;
+.bg_bittersweet {
+  background-color: var(--bittersweet);
 }
 .fw_400 {
   font-weight: 400;
