--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -1,8 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  list-style-type: none;
-  text-decoration: none;
+  list-style-type: none !important;
+  text-decoration: none !important;
   box-sizing: border-box;
 }
 .mt_150 {
