--- a/assests/scss/style.scss
+++ b/assests/scss/style.scss
@@ -8,13 +8,43 @@
 main {
   div {
     max-width: 1460px;
+
     .side_nav {
+      .mobile-nav-icon {
+        max-width: 30px;
+        z-index: 110;
+        position: relative;
+      }
       img {
         width: 180px;
+        @media (max-width: 992px) {
+          width: 110px;
+        }
+        @media (max-width: 992px) {
+          width: 70px;
+        }
       }
       ul {
+        @media (max-width: 767.9px) {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          background: #000;
+          justify-content: center;
+          align-items: center;
+          margin-top: 0 !important;
+          opacity: 0;
+          z-index: -10;
+          transition: all 0.5s ease-in-out;
+        }
         li {
           position: relative;
+          transition: all 0.5s ease-in-out;
+          @media (max-width: 767.9px) {
+            transform: translateY(100px);
+          }
           a {
             font-weight: 700;
             font-size: 16px;
@@ -46,13 +76,33 @@ main {
     }
     .hero_section {
       min-height: 772px;
+      max-height: 1000px;
       height: 100vh;
       border-left: 1px solid #262626;
+      @media (max-width: 1240px) {
+        min-height: 600px;
+      }
+      @media (max-width: 992px) {
+        max-height: 800px;
+      }
+      @media (max-width: 767.9px) {
+        min-height: 0;
+        height: auto;
+        border: 0;
+        max-height: none;
+      }
+      @media (max-width: 575.9px) {
+        padding-bottom: 300px;
+      }
       h1 {
         line-height: 100%;
         letter-spacing: 0.3em;
         @media (max-width: 1240px) {
           max-width: 300px;
+          line-height: 130%;
+        }
+        @media (max-width: 1240px) {
+          max-width: 200px;
           line-height: 130%;
         }
       }
@@ -74,6 +124,9 @@ main {
       max-width: 60%;
       height: auto;
     }
+    @media (max-width: 575.9px) {
+      max-width: 320px;
+    }
   }
   .bf_bg_logo {
     height: 100%;
@@ -84,5 +137,24 @@ main {
       top: 0 !important;
       bottom: auto !important;
     }
+    @media (max-width: 575.9px) {
+      max-width: 500px;
+      width: 250px;
+      height: auto;
+      top: auto !important;
+      bottom: 0 !important;
+    }
+  }
+}
+.showNav {
+  opacity: 100% !important;
+  z-index: 100 !important;
+  li {
+    transform: translate(0) !important;
+  }
+}
+@media (max-width: 767.9px) {
+  .nav_mobile_scroll {
+    overflow: hidden;
   }
 }
