--- a/assests/scss/Footer.css
+++ b/assests/scss/Footer.css
@@ -1,1 +1,103 @@
-*{padding:0;margin:0;text-decoration:none;list-style:none}.AnythingYou_py{padding-top:80px !important;padding-bottom:80px !important}.bg_black{background:#000}
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  text-decoration: none !important;
+}
+.line_height_common {
+  line-height: 113% !important;
+}
+.AnythingYou_py {
+  padding-top: 80px !important;
+  padding-bottom: 80px !important;
+}
+.main-container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+.max_w_text {
+  max-width: 334px;
+}
+.font_opacity {
+  opacity: 0.7;
+}
+.max_w_pra {
+  max-width: 320px;
+}
+.col-6 {
+  width: 50%;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.pra_py {
+  padding-top: 24px;
+  padding-bottom: 16px;
+}
+.mb_16 {
+  margin-bottom: 16px;
+}
+.mt_16 {
+  margin-top: 16px;
+}
+.chng_clr_hover {
+  color: #fff ;
+  transition: all 250ms linear;
+}
+.chng_clr_hover:hover {
+  transition: all 250ms linear;
+  color: #e84a5f;
+}
+.font-opacity1 {
+  opacity: 0.5 !important;
+}   
+.contact_form {
+  display: block;
+  font-family: "Roboto", sans-serif;
+  width: 100% !important;
+  font-size: var(--fs-sm);
+  padding: 10px !important;
+  line-height: 113%;
+  font-weight: 400;
+  height: 47px;
+  border: 1px solid #fff !important;
+  border-radius: 8px !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+  color: #fff !important;
+}
+.contact_form_height {
+  height: 98px !important;
+}
+.contact_form_btn {
+  border: 1px solid #fe6a5b;
+  width: 100%;
+  border-radius: 8px;
+  height: 48px;
+  background: #fe6a5b;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: inherit;
+  white-space: nowrap;
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.contact_form_btn:hover {
+  color: #fe6a5b !important;
+  background: #000 !important;
+  border: 1px solid #fe6a5b;
+}
+.text_area {
+  height: 98px !important;
+}
+a{
+  color: #fff !important;
+    transition: all 0.3s ease-in-out;
+}
+a:hover {
+ color: #e84a5f !important;
+  transition: all 0.3s ease-in-out;
+}
