litigation section in progress

--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -75,6 +75,15 @@
 .hover_svg {
   transition: all 0.3s ease-in-out;
 }
+.litigation_section{
+  margin-top: -50px;
+}
+.litigation_main_parent{
+  height: 1050px;
+}
+.litigation_section_margin{
+  margin-top: 150px;
+}
 @media (max-width: 1300px) {
   .milad_parent_margin {
     margin-left: 100px;
