--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -26,6 +26,19 @@
 .letter_0-3 {
   letter-spacing: -0.03em;
 }
+.letter_03 {
+  letter-spacing: 0.03em;
+}
+.letter_0-5 {
+  letter-spacing: -0.05em;
+}
+.gray_hr {
+  height: 1px;
+  width: 70%;
+  opacity: 0.15;
+  background-color: white;
+  margin: 16px 0;
+}
 .opacity_07 {
   opacity: 0.7;
 }
@@ -75,14 +88,20 @@
 .hover_svg {
   transition: all 0.3s ease-in-out;
 }
-.litigation_section{
+.litigation_section {
   margin-top: -50px;
 }
-.litigation_main_parent{
+.litigation_main_parent {
   height: 1050px;
 }
-.litigation_section_margin{
+.litigation_section_margin {
   margin-top: 150px;
+}
+.peach_hr {
+  width: 27px;
+  background-color: var(--bittersweet);
+  opacity: 1;
+  height: 1px;
 }
 @media (max-width: 1300px) {
   .milad_parent_margin {
