--- a/assests/scss/root.scss
+++ b/assests/scss/root.scss
@@ -62,7 +62,7 @@ $background-color_2: var(--bittersweet);
     --fs-8xl: 100px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 991.9px) {
   :root {
     --fs-xsm: 13px;
     --fs-sm: 16px;
@@ -70,7 +70,31 @@ $background-color_2: var(--bittersweet);
     --fs-lg: 27px;
     --fs-xl: 28px;
     --fs-2xl: 40px;
-    --fs-5xl: 96px;
+    --fs-5xl: 77px;
     --fs-8xl: 80px;
+  }
+}
+@media (max-width: 765.9px) {
+  :root {
+    --fs-xsm: 13px;
+    --fs-sm: 16px;
+    --fs-md: 21px;
+    --fs-lg: 27px;
+    --fs-xl: 28px;
+    --fs-2xl: 40px;
+    --fs-5xl: 55px;
+    --fs-8xl: 80px;
+  }
+}
+@media (max-width: 575.9px) {
+  :root {
+    --fs-xsm: 13px;
+    --fs-sm: 14px;
+    --fs-md: 21px;
+    --fs-lg: 27px;
+    --fs-xl: 28px;
+    --fs-2xl: 40px;
+    --fs-5xl: 36px;
+    --fs-8xl: 40px;
   }
 }
