--- a/assests/scss/style.scss
+++ b/assests/scss/style.scss
@@ -15,20 +15,25 @@ main {
         z-index: 110;
         position: relative;
       }
-      img {
-        width: 180px;
-        @media (max-width: 992px) {
-          width: 110px;
-        }
-        @media (max-width: 992px) {
-          width: 70px;
+      .menu_icon {
+        width: 46px;
+      }
+      a {
+        img {
+          width: 180px;
+          @media (max-width: 992px) {
+            width: 110px;
+          }
+          @media (max-width: 992px) {
+            width: 70px;
+          }
         }
       }
       ul {
         @media (max-width: 767.9px) {
           position: fixed;
           top: 0;
-          left: 0;
+          left: -100%;
           width: 100%;
           height: 100vh;
           background: #000;
@@ -81,18 +86,20 @@ main {
       border-left: 1px solid #262626;
       @media (max-width: 1240px) {
         min-height: 600px;
+        max-height: 700px;
       }
       @media (max-width: 992px) {
-        max-height: 800px;
+        max-height: 600px;
       }
       @media (max-width: 767.9px) {
+        max-height: 700px;
         min-height: 0;
         height: auto;
         border: 0;
         max-height: none;
       }
       @media (max-width: 575.9px) {
-        padding-bottom: 300px;
+        padding-bottom: 250px;
       }
       h1 {
         line-height: 100%;
@@ -101,19 +108,29 @@ main {
           max-width: 300px;
           line-height: 130%;
         }
-        @media (max-width: 1240px) {
+        @media (max-width: 991.9px) {
           max-width: 200px;
           line-height: 130%;
+        }
+        @media (max-width: 575.9px) {
+          max-width: none;
         }
       }
       h2 {
         line-height: 80%;
         margin-bottom: 200px;
         letter-spacing: -0.05em;
+        @media (max-width: 575.9px) {
+          line-height: 100%;
+        }
       }
       .scroll_down {
         bottom: 24px;
         left: 16px;
+        @media (max-width: 767.9px) {
+          max-width: 40px;
+          left: 0;
+        }
       }
     }
   }
@@ -121,8 +138,12 @@ main {
     height: 85%;
     z-index: 1;
     @media (max-width: 1240px) {
-      max-width: 60%;
+      max-width: 50%;
       height: auto;
+      max-height: 100%;
+    }
+    @media (max-width: 767.9px) {
+      max-width: 60%;
     }
     @media (max-width: 575.9px) {
       max-width: 320px;
@@ -149,8 +170,23 @@ main {
 .showNav {
   opacity: 100% !important;
   z-index: 100 !important;
+  left: 0 !important;
   li {
     transform: translate(0) !important;
+  }
+}
+
+// Advise Client section
+.custom_container {
+  @media (min-width: 1240px) {
+    max-width: 1140px !important;
+  }
+  .advise {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    letter-spacing: -0.05em;
+    max-width: 870px;
+    line-height: 100%;
   }
 }
 @media (max-width: 767.9px) {
