--- a/assests/scss/root.scss
+++ b/assests/scss/root.scss
@@ -1,7 +1,8 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
 
-body {
+body , html {
   font-family: "Roboto", sans-serif !important;
+  overflow-x: hidden;
 }
 
 $color_1: var(--bittersweet);
@@ -68,7 +69,7 @@ $background-color_2: var(--bittersweet);
     --fs-lg: 27px;
     --fs-xl: 28px;
     --fs-2xl: 40px;
-    --fs-5xl: 96px;
+    --fs-5xl: 80px;
     --fs-8xl: 100px;
   }
 }
@@ -80,7 +81,7 @@ $background-color_2: var(--bittersweet);
     --fs-lg: 20px;
     --fs-xl: 28px;
     --fs-2xl: 32px;
-    --fs-5xl: 96px;
+    --fs-5xl: 68px;
     --fs-8xl: 100px;
   }
 }
@@ -92,11 +93,11 @@ $background-color_2: var(--bittersweet);
     --fs-lg: 27px;
     --fs-xl: 28px;
     --fs-2xl: 40px;
-    --fs-5xl: 96px;
+    --fs-5xl: 60px;
     --fs-8xl: 80px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   :root {
     --fs-xsm: 13px;
     --fs-sm: 16px;
@@ -104,7 +105,7 @@ $background-color_2: var(--bittersweet);
     --fs-lg: 20px;
     --fs-xl: 28px;
     --fs-2xl: 32px;
-    --fs-5xl: 96px;
+    --fs-5xl: 48px;
     --fs-8xl: 80px;
   }
 }
@@ -112,11 +113,11 @@ $background-color_2: var(--bittersweet);
   :root {
     --fs-xsm: 13px;
     --fs-sm: 16px;
-    --fs-md: 21px;
+    --fs-md: 16px;
     --fs-lg: 20px;
     --fs-xl: 28px;
     --fs-2xl: 26px;
-    --fs-5xl: 96px;
+    --fs-5xl: 48px;
     --fs-8xl: 80px;
   }
 }
