--- a/assests/scss/slider.scss
+++ b/assests/scss/slider.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 1320px;
   margin: 0px auto;
-  padding: 80px 12px;
+  padding: 48px 48px;
 }
 
 .slick-prev {
@@ -22,11 +22,11 @@
 .slider-arrow {
   display: flex !important;
   position: absolute;
-  top: 0;
+  top: 18%;
   right: 10%;
 }
 
-.title-space {
+.text-space {
   line-height: 100%;
 }
 
@@ -44,8 +44,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 24px;
-  margin-left: 20px;
+  margin-right: 20px;
   background: #ffffff;
   border: 4px solid #000000;
   border-radius: 0px 0px 48px 0px;
@@ -56,5 +55,29 @@
 
   &:hover {
     scale: 0.95;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .slider-arrow {
+    display: flex !important;
+    position: absolute;
+    top: 8%;
+    right: 10%;
+  }
+}
+@media (max-width: 575.98px) {
+  .slider-arrow {
+    display: flex !important;
+    position: absolute;
+    top: 8%;
+    right: 10%;
+  }
+  .slide-card {
+    min-height: 360px !important;
+
+    &:hover {
+      scale: 0.95;
+    }
   }
 }
