--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -188,8 +188,12 @@ footer a:hover svg path {
 .footer_link_col {
   width: 75% !important;
 }
-.pointer_event_none{
+.pointer_event_none {
   pointer-events: none;
+}
+.max_w_1440 {
+  max-width: 1440px;
+  margin: 0 auto !important;
 }
 @media (max-width: 1299.98px) {
   .milad_parent_margin {
