--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -195,6 +195,9 @@ footer a:hover svg path {
   max-width: 1440px;
   margin: 0 auto !important;
 }
+.footer_links_hover:hover{
+  color: #fe6a5b !important;
+}
 @media (max-width: 1299.98px) {
   .milad_parent_margin {
     margin-left: 100px;
