--- a/assests/scss/style.scss
+++ b/assests/scss/style.scss
@@ -262,7 +262,15 @@ main {
 .we_deal_with {
   padding-left: 40px;
 }
-
+.forward_line:after {
+  content: "";
+  position: absolute;
+  width: 27px;
+  height: 1px;
+  background-color: #fe6a5b;
+  left: 0;
+  top: 50%;
+}
 @media (max-width: 767.9px) {
   .nav_mobile_scroll {
     overflow: hidden;
