--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -232,6 +232,13 @@ footer a:hover svg path {
   .social_icons_margin {
     margin-left: 100px;
   }
+  .hammer_img {
+    width: 454px;
+    position: absolute;
+    top: 60px;
+    height: 931px;
+    right: 20%;
+  }
 }
 @media (max-width: 1179.98px) {
   .image_col {
@@ -252,6 +259,12 @@ footer a:hover svg path {
     position: absolute;
     top: 240px;
     right: 10%;
+  }
+  .litigation_section_margin {
+    margin-top: 0px !important;
+  }
+  .litigation_main_parent {
+    height: 810px;
   }
 }
 @media (max-width: 991.98px) {
@@ -308,7 +321,7 @@ footer a:hover svg path {
     height: 500px;
     object-fit: contain;
     position: absolute;
-    top: 180px;
+    top: 140px;
     right: 20%;
   }
   .anything_heading {
@@ -317,6 +330,7 @@ footer a:hover svg path {
   .litigation_section_margin {
     margin-top: 80px !important;
   }
+
   .litigation_main_parent {
     height: 680px;
   }
@@ -360,9 +374,19 @@ footer a:hover svg path {
     right: -20%;
   }
   .litigation_main_parent {
-    height: 920px;
+    height: 900px;
+  }
+  .litigation_section_img {
+    margin-top: 90px;
+  }
+  .slider-arrow {
+    top: 1% !important;
+  }
+  .container {
+    padding: 12px 20px !important;
   }
 }
+
 @media (max-width: 499.98px) {
   .founder_women_img {
     margin-top: 0px !important;
