--- a/assests/scss/slider.scss
+++ b/assests/scss/slider.scss
@@ -1,13 +1,13 @@
-.container {
-  max-width: 1320px !important;
-  transition: all 300ms linear !important;
+.my-container {
+  max-width: 1440px !important;
   margin: 0px auto;
-  padding: 12px 48px;
+  padding: 48px 12px;
 }
 
 .slick-prev {
   max-width: 72px !important;
   transition: all 300ms linear !important;
+  cursor: pointer;
   &:hover {
     svg {
       .hover_svg {
@@ -18,6 +18,7 @@
 }
 .hover_svg {
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 .slick-next {
   max-width: 72px;
@@ -30,10 +31,14 @@
   }
 }
 
+.letter-05 {
+  letter-spacing: -0.05em;
+}
+
 .slider {
   max-width: 1320px;
   .slick-track {
-    margin-left: -14%;
+    margin-left: -17%;
   }
   @media (max-width: 1139.98px) {
     .slick-track {
@@ -66,11 +71,17 @@
   line-height: 100%;
 }
 
+.text-red {
+  color: #fe6a5b;
+}
+
 .text-normal {
   line-height: 100%;
-  max-height: 210px;
+  opacity: 0.7;
+  max-height: 224px !important;
   overflow-y: scroll;
   margin-bottom: 0;
+  letter-spacing: -0.03em;
 }
 ::-webkit-scrollbar {
   display: none;
@@ -84,9 +95,6 @@
   background: #ffffff;
   border: 4px solid #000000;
   border-radius: 0px 0px 48px 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   transition: all 300ms linear;
 
   &:hover {
