--- a/assets/scss/root.scss
+++ b/assets/scss/root.scss
@@ -1,6 +1,7 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
 
-body , html {
+body,
+html {
   font-family: "Roboto", sans-serif !important;
   overflow-x: hidden;
 }
@@ -18,6 +19,7 @@ $background-color_2: var(--bittersweet);
   --fs-5xl: 96px;
   --fs-8xl: 144px;
   --bittersweet: #fe6a5b;
+  --fw-800: 800;
 }
 
 /* font sizes  */
@@ -51,6 +53,9 @@ $background-color_2: var(--bittersweet);
 
 .fs_8xl {
   font-size: var(--fs-8xl);
+}
+.fw_800 {
+  font-weight: var(--fw-800);
 }
 
 /* colors  */
@@ -110,7 +115,7 @@ $background-color_2: var(--bittersweet);
   }
 }
 
-@media (max-width: 575.9px) { 
+@media (max-width: 575.9px) {
   :root {
     --fs-xsm: 13px;
     --fs-sm: 14px;
