--- a/assets/scss/slider.scss
+++ b/assets/scss/slider.scss
@@ -16,6 +16,9 @@
     }
   }
 }
+.news_slider {
+  margin-left: -10px;
+}
 .hover_svg {
   transition: all 0.3s ease-in-out;
 }
@@ -53,12 +56,14 @@
 }
 
 .slider-arrow {
-  display: flex !important;
-  position: absolute;
   top: 18%;
   right: 10%;
+
+  @media (max-width: 1023499.98px) {
+    top: 6.5%;
+  }
   @media (max-width: 767.98px) {
-    top: 2%;
+    top: 10%;
   }
 }
 
@@ -80,13 +85,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 20px;
-  background: #ffffff;
+  margin-left: 10px;
+  margin-right: 10px;
   border: 4px solid #000000;
   border-radius: 0px 0px 48px 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   transition: all 300ms linear;
 
   &:hover {
