--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -254,10 +254,11 @@ footer a:hover svg path {
   }
   .hammer_img {
     width: 100%;
-    height: 500px;
+    height: 640px;
+    -o-object-fit: contain;
     object-fit: contain;
     position: absolute;
-    top: 240px;
+    top: 80px;
     right: 10%;
   }
   .litigation_section_margin {
@@ -332,7 +333,7 @@ footer a:hover svg path {
   }
 
   .litigation_main_parent {
-    height: 680px;
+    height: 760px;
   }
   .social_icons_margin {
     margin-left: 0px;
