--- a/assests/scss/milad.scss
+++ b/assests/scss/milad.scss
@@ -318,25 +318,28 @@ footer a:hover svg path {
     max-width: unset;
   }
   .hammer_img {
-    width: 100%;
+    width: 240px;
     height: 500px;
-    object-fit: contain;
     position: absolute;
-    top: 140px;
-    right: 20%;
+    top: 160px;
+    right: 0%;
   }
   .anything_heading {
     max-width: unset;
   }
-  .litigation_section_margin {
-    margin-top: 80px !important;
+ .litigation_section_margin {
+    margin-top: 0px !important;
   }
-
   .litigation_main_parent {
     height: 760px;
   }
   .social_icons_margin {
     margin-left: 0px;
+  }
+}
+@media (max-width: 767.98px) {
+  .litigation_section_margin {
+    margin-top: 80px !important;
   }
 }
 @media (max-width: 575.98px) {
@@ -368,8 +371,6 @@ footer a:hover svg path {
   .hammer_img {
     width: 100%;
     height: 371px;
-    -o-object-fit: contain;
-    object-fit: contain;
     position: absolute;
     top: -100px;
     right: -20%;
