--- a/assets/scss/new.scss
+++ b/assets/scss/new.scss
@@ -4,7 +4,7 @@
   padding: 0 12px;
 }
 .cards_margin_padding {
-  margin-top: 150px;
+  padding-top: 150px;
   padding-bottom: 150px;
 }
 .new_data_card {
@@ -81,6 +81,9 @@ h3 {
     height: 100%;
     padding-left: 30px;
   }
+  .cards_border_radius_one_side {
+  border-radius: 0px 0px 200px 0px;
+}
 }
 @media (max-width: 1099.98px) {
   .news_hero_image_desktop {
@@ -88,6 +91,14 @@ h3 {
     height: 100%;
     padding-left: 10px;
   }
+  .cards_border_radius_one_side {
+  border-radius: 0px 0px 180px 0px;
+}
+}
+@media (max-width: 991.98px) {
+  .cards_border_radius_one_side {
+  border-radius: 0px 0px 150px 0px;
+}
 }
 @media (max-width: 767.98px) {
   .news_hero_image_desktop {
@@ -97,8 +108,8 @@ h3 {
     display: flex;
   }
   .cards_border_radius_one_side {
-  border-radius: 0px 0px 80px 0px;
-}
+    border-radius: 0px 0px 80px 0px;
+  }
 }
 @media (max-width: 575.98px) {
   .cards_box {
