--- a/assets/scss/root.scss
+++ b/assets/scss/root.scss
@@ -3,7 +3,7 @@
 body,
 html {
   font-family: "Roboto", sans-serif !important;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 $color_1: var(--bittersweet);
