--- a/assets/scss/milad.scss
+++ b/assets/scss/milad.scss
@@ -237,7 +237,7 @@ footer a:hover svg path {
     position: absolute;
     top: 60px;
     height: 931px;
-    right: 20%;
+    right: 0%;
   }
 }
 @media (max-width: 1179.98px) {
@@ -373,7 +373,7 @@ footer a:hover svg path {
     height: 371px;
     position: absolute;
     top: -100px;
-    right: -20%;
+    left: 0%;
   }
   .litigation_main_parent {
     height: 900px;
