--- a/assets/scss/slider.scss
+++ b/assets/scss/slider.scss
@@ -61,10 +61,14 @@
 }
 
 .slider-arrow {
-  top: 15%;
+  top: 20%;
   right: 10%;
+  @media (max-width: 1199.98px) {
+    top: 16%;
+    right: 7%;
+  }
   @media (max-width: 1023.98px) {
-    top: 10%;
+    top: 7%;
   }
 }
 
