--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,22 @@
 }
 
 main {
+  min-height: 772px;
+  max-height: 1000px;
+  height: 100vh;
+  @media (max-width: 1240px) {
+    min-height: 600px;
+    max-height: 700px;
+  }
+  @media (max-width: 992px) {
+    max-height: 600px;
+  }
+  @media (max-width: 767.9px) {
+    max-height: 700px;
+    min-height: 0;
+    height: auto;
+    max-height: none;
+  }
   div {
     max-width: 1460px;
 
@@ -17,7 +33,10 @@ main {
         position: relative;
       }
       .menu_icon {
-        width: 46px;
+        width: 40px;
+        @media (max-width: 575.9px) {
+          width: 30px;
+        }
       }
       a {
         img {
@@ -27,6 +46,9 @@ main {
           }
           @media (max-width: 992px) {
             width: 70px;
+          }
+          @media (max-width: 575.9px) {
+            width: 48px;
           }
         }
       }
@@ -48,9 +70,6 @@ main {
         li {
           position: relative;
           transition: all 0.5s ease-in-out;
-          @media (max-width: 767.9px) {
-            transform: translateY(100px);
-          }
           a {
             font-weight: 700;
             font-size: 16px;
@@ -109,9 +128,9 @@ main {
     }
 
     .hero_section {
-      min-height: 772px;
-      max-height: 770px;
-      height: 100vh;
+      min-height: 750px;
+      height: 80vh;
+      max-height: 800px;
       border-left: 1px solid #262626;
       .news_hero_section {
         min-height: 572px;
@@ -171,7 +190,12 @@ main {
         }
         @media (max-width: 767.9px) {
           max-width: 40px;
+          left: 48px;
+          margin-bottom: -16px;
+        }
+        @media (max-width: 575.9px) {
           left: 0;
+          margin-bottom: 0;
         }
       }
     }
@@ -185,15 +209,17 @@ main {
     }
   }
   .parthners {
-    height: 89%;
+    max-width: 630px;
     z-index: 1;
+    bottom: -20px;
+    object-fit: contain;
+    object-position: bottom;
     @media (max-width: 1440px) {
-      max-width: 52%;
-      height: auto;
-      max-height: 100%;
+      max-width: 630px;
     }
     @media (max-width: 1240px) {
       max-width: 50%;
+      bottom: 0;
       height: auto;
       max-height: 100%;
     }
@@ -203,31 +229,28 @@ main {
   }
   .bf_bg_logo {
     // height: 100% !important;
-    max-width: 30%;
+    max-width: 550px;
+    object-position: top;
     width: 100%;
     top: 0;
     z-index: 0;
     @media (max-width: 1440px) {
-      max-width: 35%;
-      top: auto;
-      height: 100%;
-      bottom: 0 !important;
+      max-width: 550px;
+      width: 40%;
     }
     @media (max-width: 1240px) {
       max-width: 38%;
       height: auto;
-      bottom: 0 !important;
     }
     @media (max-width: 1140px) {
       max-width: 40%;
       height: auto;
-      top: auto;
-      bottom: 0 !important;
     }
     @media (max-width: 575.9px) {
       max-width: 500px;
-      width: 250px;
+      width: 220px;
       height: auto;
+      top: auto;
       bottom: 0 !important;
     }
   }
@@ -244,39 +267,12 @@ main {
       top: 50%;
     }
   }
-  .parthners {
-    height: 100%;
-    z-index: 1;
-    @media (max-width: 1440px) {
-      max-width: 52%;
-      height: auto;
-      max-height: 100%;
-    }
-    @media (max-width: 1240px) {
-      max-width: 50%;
-      height: auto;
-      max-height: 100%;
-    }
-    @media (max-width: 575.9px) {
-      max-width: 80%;
-    }
-  }
-}
-
-.min_vh_100 {
-  min-height: 100vh;
-  @media (max-width: 575.9px) {
-    min-height: 90vh;
-  }
 }
 
 .showNav {
   opacity: 100% !important;
   z-index: 100 !important;
   left: 0 !important;
-  li {
-    transform: translate(0) !important;
-  }
 }
 .cursor_pointer {
   cursor: pointer;
